# fusion-calculator-rs

./: Cargo.toml  README.md
benches/: bench_main.rs
benches/benchmarks/: data_structures_bench.rs  mod.rs
src/: lib.rs  main.rs
src/calculator/: fusion_calculator.rs  mod.rs
src/cli/: fusion_cli.rs  mod.rs
src/cli/commands/: fuse.rs  list.rs  mod.rs
src/data/: data.rs  types.rs
src/persona_data/: README.md  data.rs  utils.rs
src/terminal/: mod.rs  table.rs  term.rs
