[package]
name = "fusion-calculator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
structopt = { version = "0.3.26" }
comfy-table = { version = "6.1" }
crossterm = { version = "0.26.0" }
phf = { version = "0.11", features = ["macros"] }
itertools = { version = "0.10.5" }
enum-iterator = "1.4.0"