[package]
name = "fusion-calculator-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fusion-calculator"
path = "src/main.rs"
bench = false

[lib]
bench = false

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.1.8", features = ["derive"] }
structopt = { version = "0.3.26" }
comfy-table = { version = "6.1" }
crossterm = { version = "0.26.0" }
phf = { version = "0.11", features = ["macros"] }
itertools = { version = "0.10.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "bench_main"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"